--- a/frontend/managment/package.json
+++ b/frontend/managment/package.json
@@ -18,7 +18,9 @@
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.6",
     "fs-extra": "^11.3.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.523.0",
     "path-browserify": "^1.0.1",
     "react": "^19.1.0",
@@ -34,7 +36,8 @@
     "stock-link": "file:../../stock-link--",
     "styled-components": "^6.1.19",
     "sweetalert2": "^11.17.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
