--- a/stock-link--/scripts/backend/package.json
+++ b/stock-link--/scripts/backend/package.json
@@ -6,11 +6,12 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
     "bwip-js": "^4.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^17.0.1",
+    "dotenv": "^17.1.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
